# Solace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
acp/: Cargo.toml
acp/src/: discovery.rs  gossip.rs  lib.rs  messaging.rs
ai/: requirements.txt
ai/src/: lib.rs
ai/src/agents/: trading_agent.py
api/: package.json
api/src/: index.ts
api/src/routes/: agents.ts
api/src/services/: AgentService.ts
docs/: architecture.md  protocol-spec.md
examples/: README.md  basic-agent.py
framework/: Cargo.toml
framework/src/: acp.rs  agent.rs  blockchain.rs  consensus.rs  crypto.rs  error.rs  lib.rs  network.rs  reputation.rs  storage.rs  transaction.rs  types.rs  utils.rs
sdks/python/: setup.py
sdks/typescript/: package.json
sdks/typescript/src/: agent.ts  index.ts  types.ts
tests/: Cargo.toml  README.md
tests/src/: benchmarks.rs  integration_tests.rs  test_utils.rs
tools/agent-cli/src/: main.rs
tools/cli/: Cargo.toml
tools/network-analyzer/: Cargo.toml
tools/network-analyzer/src/: main.rs
tools/performance-monitor/: Cargo.toml
tools/performance-monitor/src/: main.rs
