[package]
name = "acp"
version = "1.0.0"
edition = "2021"
authors = ["Solace Protocol Team <team@solaceprotocol.com>"]
description = "Autonomous Commerce Protocol (ACP) - Core messaging and coordination layer"
license = "MIT"
repository = "https://github.com/solaceprotocol/solace-protocol"
keywords = ["protocol", "messaging", "autonomous", "commerce", "coordination"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Networking
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"

[features]
default = ["full"]
full = ["p2p", "gossip", "discovery"]
p2p = []
gossip = []
discovery = [] 